# flowboard

./: .env.deploy.local.example  .gitignore  Makefile  README.md
.github/workflows/: sync-upstream.yml
.omc/plans/: multi-llm-provider-legacy.md  multi-llm-provider.md
agent/: .env.example  pyproject.toml
agent/flowboard/: config.py  main.py
agent/tests/: conftest.py  test_auth.py  test_boards.py  test_chat.py  test_claude_cli.py  test_control_plane.py  test_edges.py  test_executor_hardening.py  test_extension_worker.py  test_flow_browser_driver.py  test_flow_client.py  test_nodes.py  (+22 more)
docs/: ADR-0001-pham-vi-thuong-mai.md  ADR-0002-tach-control-plane.md  ADR-0003-go-bo-tauri-desktop.md  AUDIT_VA_ROADMAP.md  SPIKE-gemini-qua-flow-generatecontent.md  asset-gc-rollout.md  auth-email-rollout.md  zero-cost-cloudflare-deployment.md
extension/: README.md  app_bridge.js  asset_utils.js  background.js  cloud_client.js  content.js  flow_api.js  injected.js  manifest.json  package-lock.json  package.json  popup.html  popup.js  vitest.config.js
frontend/: .env.production.example  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: lib.rs
frontend/src-tauri/src/commands/: mod.rs
frontend/src-tauri/src/db/: mod.rs  models.rs
frontend/src-tauri/src/services/: flow_client.rs  http_server.rs  mod.rs  ws_server.rs
frontend/src-tauri/src/worker/: mod.rs
scratch/: query_supabase.py
scripts/: deploy-cloud.ps1  sync-upstream.ps1
(+253 files in other folders)
